# outputter

./: Cargo.toml  README.md  flake.nix
src/: helper.rs  main.rs
