[package]
name = "outputter"
version = "0.1.0"
edition = "2021"
default-run = "outputter"

[dependencies]
async-scoped = {version = "0.9.0", features = ["tokio", "use-tokio"]}
ratatui = "0.28.0"
time = { version = "0.3.36", features = ["formatting", "macros"] }
tokio = { version = "1.39.3", features = ["full"] }
